--- a/6. Fondamento di networking e tecnologie TCP-IP/0. Contenuti.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/0. Contenuti.md
@@ -1,6 +1,4 @@
-
-```dataview
-LIST
-FROM "Corso IT/6. Fondamento di networking e tecnologie TCP-IP"
-SORT file.name ASC
-```
+1. Introduzione alle Reti
+1a. Network Architecture
+2. Configurazione Switch e Dispositivo Finale
+3. 
