--- a/6. Fondamento di networking e tecnologie TCP-IP/0. Contenuti.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/0. Contenuti.md
@@ -1,4 +1,11 @@
-1. Introduzione alle Reti
-1a. Network Architecture
-2. Configurazione Switch e Dispositivo Finale
-3. 
+1. [Introduzione alle Reti](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/1.%20Introduzione%20alle%20Reti.md)
+1a. [Network Architecture](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/1a.%20Network%20Architecture.md)
+2. [Configurazione Switch e Dispositivo Finale](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/2.%20Configurazione%20Switch%20e%20Dispositivo%20Finale.md)
+3. [Protocolli e Modelli](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/3.%20Protocolli%20e%20Modelli.md)
+4. [Physical Layer](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/4.%20Physical%20Layer.md)
+5. [Number System](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/5.%20Number%20Systems.md)
+6. [Data Link Layer](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/6.%20Data%20Link%20Layer.md)
+7. [Ethernet Switching](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/7.%20Ethernet%20Switching.md)
+8. [Network Layer](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/8.%20Network%20Layer.md)
+10. [Router Configuration](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/10.%20Router%20Configuration.md)
+11. [IPv4 Address Structure](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/11.%20IPv4%20Address%20Structure.md)
