Update 1. Introduzione alle Reti.md

--- a/6. Fondamento di networking e tecnologie TCP-IP/1. Introduzione alle Reti.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/1. Introduzione alle Reti.md
@@ -22,9 +22,9 @@
 
 # [Metodi di connessione](4.%20Physical%20Layer.md)
 
-- [Cavo di rame](Copper%20Cabling.md)
-- [Cavo di fibra](Fibre%20Cabling.md)
-- [Wireless](Wireless%20Media.md)
+- [Cavo di rame](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Model%20Layers/Copper%20Cabling.md)
+- [Cavo di fibra](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Model%20Layers/Fibre%20Cabling.md)
+- [Wireless](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Model%20Layers/Wireless%20Media.md)
 
 # Diagrammi Topologici
 
