--- a/6. Fondamento di networking e tecnologie TCP-IP/3. Protocolli e Modelli.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/3. Protocolli e Modelli.md
@@ -17,11 +17,11 @@ Overhead: Codice di comunicazione, parte del messaggio usato solo a contenere le
 
 # Network Protocol Requirements 
 
-- [Message Encoding](Message%20Encoding.md): converts the message for transmission.
-- [Message Formatting and Encapsulation](Message%20Formatting%20and%20Encapsulation.md): identification of sender and receiver and layering of the message.
-- [Message Size](Message%20Size.md): scaling of the message for sending.
-- [Message Timing](Message%20Timing.md): flow control, response timeout and access method.
-- [Message Delivery Options](Message%20Delivery%20Options.md): unicast, multicast and broadcast.
+- [Message Encoding](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Network%20Protocol%20Requirements/Message%20Encoding.md): converts the message for transmission.
+- [Message Formatting and Encapsulation](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Network%20Protocol%20Requirements/Message%20Formatting%20and%20Encapsulation.md): identification of sender and receiver and layering of the message.
+- [Message Size](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Network%20Protocol%20Requirements/Message%20Size.md): scaling of the message for sending.
+- [Message Timing](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Network%20Protocol%20Requirements/Message%20Timing.md): flow control, response timeout and access method.
+- [Message Delivery Options](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Network%20Protocol%20Requirements/Message%20Delivery%20Options.md): unicast, multicast and broadcast.
 
 # Network Protocol Functions
 
