--- a/6. Fondamento di networking e tecnologie TCP-IP/3. Protocolli e Modelli.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/3. Protocolli e Modelli.md
@@ -44,7 +44,7 @@ A protocol suite is a group of inter-related protocols necessary to perform a co
 | ------------------------------------------------------------------------------------ | -------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------- |
 | - Application<br>- Presentation<br>- Session                                         | Application    | - Name system (DNS)<br>- Host configuration (DHCP, SLAAC)<br>- Email (SMTP, POP3, IMAP)<br>- File transfer (FTP, SFTP, TFTP)<br>- Web Service (HTTP, REST) | Data                 |
 | Transport                                                                            | Transport      | - Connection-Oriented (TCP)<br>- Connectionless (UDP)                                                                                                      | Segment              |
-| [Network](8.%20Network%20Layer.md)                                                   | Internet       | - Internet Protocol (IP, NAT)<br>- Messaging (ICMP)<br>- Routing Protocols (OSPF, EIGPR, BGP)                                                              | [Packet](Packets.md) |
+| [Network](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/8.%20Network%20Layer.md)                                                   | Internet       | - Internet Protocol (IP, NAT)<br>- Messaging (ICMP)<br>- Routing Protocols (OSPF, EIGPR, BGP)                                                              | [Packet](Packets.md) |
 | - [Data Link](6.%20Data%20Link%20Layer.md)<br>- [Physical](4.%20Physical%20Layer.md) | Network Access | - Address Resolution (ARP)<br>- Data Link Protocols (Ethernet, WLAN)                                                                                       | [Frame](Frame.md)    | 
 
 # Protocol Stack Table
@@ -63,7 +63,7 @@ The advantages of using a layered model are:
 | 6 - Presentation                                  | Provides for common representation of the data transferred between application layer services.                                                                                         |
 | 5 - Session                                       | Provides services to the presentation layer to organize its dialogue and to manage data exchange.                                                                                      |
 | 4 - Transport                                     | Defines services to segment, transfer, and reassemble the data for individual communications between the end devices.                                                                  |
-| [3. Network Layer](8.%20Network%20Layer.md)       | Provides services to exchange the individual pieces of data over the network between identified end devices. (Router device)                                                           |
+| [3. Network Layer](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/8.%20Network%20Layer.md)       | Provides services to exchange the individual pieces of data over the network between identified end devices. (Router device)                                                           |
 | [2. Data Link Layer](6.%20Data%20Link%20Layer.md) | Describe methods for exchanging data frames between devices over a common media (Switch device)                                                                                        |
 | [1. Physical Layer](4.%20Physical%20Layer.md)     | Describe the mechanical, electrical, functional, and procedural means to activate, maintain, and de-activate physical connections for a bit transmission to and from a network device. |
 
