Update 4. Physical Layer.md

--- a/6. Fondamento di networking e tecnologie TCP-IP/4. Physical Layer.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/4. Physical Layer.md
@@ -1,8 +1,8 @@
 Connection types:
 
-- [Copper Cabling](Copper%20Cabling.md): Electric signal
-- [Fibre Cabling](Fibre%20Cabling.md): Light pulse
-- [Wireless Media](Wireless%20Media.md)
+- [Copper Cabling](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Model%20Layers/Copper%20Cabling.md): Electric signal
+- [Fibre Cabling](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Model%20Layers/Fibre%20Cabling.md): Light pulse
+- [Wireless Media](https://github.com/Nikkofelis/Corso_IT/blob/6b60b7179c5b9f22de97bee7e6e8652752e9c2c3/6.%20Fondamento%20di%20networking%20e%20tecnologie%20TCP-IP/Model%20Layers/Wireless%20Media.md)
 
 ## Characteristics
 
