Update 2. Configurazione Switch e Dispositivo Finale.md

--- a/6. Fondamento di networking e tecnologie TCP-IP/2. Configurazione Switch e Dispositivo Finale.md
+++ b/6. Fondamento di networking e tecnologie TCP-IP/2. Configurazione Switch e Dispositivo Finale.md
@@ -67,16 +67,87 @@ Ricorda di assegnare un IP anche al PC
 
 Diversamente dallo Switch, nel Router la running-config va configurato manualmente.
 
-1. Collegare PC con cavo (RS 232 - Console) -> Router
-2. [(config)#] Nominare il dispositivo: `hostname WORD`
-3. [(config)#] Impostare la password per privilegi da amministratore: `enable secret LINE`
-4. [(config)#] Impostare il banner MotD: `banner motd`
-5. [(config)#] Abilitare la criptazione delle password: `service password-encryption`
-6. [(config-line)#] Impostare la password per l'accesso alla console: `password WORD` e abilitare il login `login`
-7. [(config-if)#] Assegnare l'IP alla singola porta del Router: `ip address IP MASK`
+1. Attach the PC through the console cable (RS 232 - Console) -> Switch
+2. `router> enable`: activate privileged EXEC
+3. `router# configure terminal`: activate global configuration
+4. `router(config)# hostname WORD`: name device
+5. `router(config)# banner motd CHAR BANNER CHAR`: set banner
+6. `router(config)# enable secret PASSWORD`: set encrypted password for privileged EXEC
+7. `router(config)# service password-encryption`: encrypt past and future passwords
+8. `router(config)# line console 0`: enter console configuration
+9. `router(config-line)# password PASSWORD`: set password for console connection
+10. `router(config-line)# login`: abilitate password request for console link
+11. `router(config-line)# exit`: return to global configuration
+12. `router(config)# line vty 0 15`: enter virtual terminal configuration
+13. `router(config-line)# password PASSWORD`: set password for vty connection
+14. `router(config-line)# login`: abilitate password request for vty link
+15. `router(config-line)# exit`: return to global configuration
+16. `router(config)# interface gigabitEthernet 0/0`: enter physical interface configuration
+17.  `router(config-if)# ip address ADDRESS MASK`: assign an IPv4 to the interface, repeat for every other port
+18. `router(config-if)# no shutdown`: enable the physical interface
+19. `router(config-if)# exit`: return to global configuration
+20. `router(config)# exit`: return to privileged EXEC
+21. `router# show running-config`: display the running configuration
+22. `router# copy running-config startup-config`: save the running configuration file
 
 ```ad-warning
 Per il Router, la singola porta ha un IP, non il dispositivo in sé
+```
+
+### Configuration Scripts
+
+#### IPv4
+
+```terminal
+enable
+configure terminal
+hostname NAME
+banner motd BANNER
+enable secret PASSWORD
+service password-encryption
+line console 0
+password PASSWORD
+login
+exit
+line vty 0 15
+password PASSWORD
+login
+exit
+interface g 0/0
+ip address ADDRESS MASK
+no shutdown
+exit
+exit
+show running-config
+```
+
+#### IPv6
+
+```terminal
+enable
+configure terminal
+hostname NAME
+banner motd BANNER
+enable secret PASSWORD
+service password-encryption
+line console 0
+password PASSWORD
+login
+exit
+line vty 0 15
+password PASSWORD
+login
+exit
+ipv6 unicast-routing
+interface g 0/0
+ip address ADDRESS MASK
+no shutdown
+ipv6 enable
+ipv6 address ADDRESS/PREFIX
+ipv6 address ADDRESS link-local
+exit
+exit
+show running-config
 ```
 
 # Note
